# York_ML_certificate

./: .gitignore  Consumer_complaints.ipynb  M3_Notebook.ipynb  Sentiment Analysis - Advanced Deep Learning.ipynb  Smart_steel_task.ipynb  Untitled5.ipynb  assignment2.ipynb  online_sessiion_5_word_embeddings.ipynb  ss_feature_importance_blogpost_july_2018.ipynb
csml1010/: financial_categorization.ipynb
csml10xx/: Consumer_complaints.ipynb  online_sessiion_5_word_embeddings.ipynb  profile.ipynb  ss_feature_importance_blogpost_july_2018.ipynb
first_project/: README.md  pyproject.toml  report.md
first_project/src/first_project/: crew.py  gameFile.py  main.py
first_project/src/first_project/config/: agents.yaml  breakout.yaml  tasks.yaml
project2_individual/: financial_categorization.ipynb
